backend/catalog-service/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: catalog-service
  labels:
    app: catalog-service
spec:
  selector:
    app: catalog-service
  ports:
    - port: 80
      targetPort: 8004
      protocol: TCP
  type: ClusterIP
